added all the linked pages!

--- a/index.html
+++ b/index.html
@@ -243,9 +243,7 @@
 								<p>Fall 2018</p>
 								<div class="portfolio-links">
 									<a href="https://cinnamon18.itch.io/path-to-harmony"><i class="bx bx-play"></i></a>
-									<a href="portfolio-details.html" data-gall="portfolioDetailsGallery"
-										data-vbtype="iframe" class="venobox" title="Portfolio Details"><i
-											class="bx bx-link"></i></a>
+									<a href="pathToHarmonyDetails.html"><i class="bx bx-link"></i></a>
 								</div>
 							</div>
 						</div>
@@ -259,9 +257,7 @@
 								<p>Coming Late 2020</p>
 								<div class="portfolio-links">
 									<!-- <a href="http://vgdev.gtorg.gatech.edu/game/lunacia/"><i class="bx bx-play"></i></a> -->
-									<a href="portfolio-details.html" data-gall="portfolioDetailsGallery"
-										data-vbtype="iframe" class="venobox" title="Portfolio Details"><i
-											class="bx bx-link"></i></a>
+									<a href="lunaciaDetails.html"><i class="bx bx-link"></i></a>
 								</div>
 							</div>
 						</div>
@@ -275,9 +271,7 @@
 								<p>Coming Late 2020</p>
 								<div class="portfolio-links">
 									<!-- <a href="http://vgdev.gtorg.gatech.edu/game/misomadness/"><i class="bx bx-play"></i></a> -->
-									<a href="portfolio-details.html" data-gall="portfolioDetailsGallery"
-										data-vbtype="iframe" class="venobox" title="Portfolio Details"><i
-											class="bx bx-link"></i></a>
+									<a href="miSoMadnessDetails.html"><i class="bx bx-link"></i></a>
 								</div>
 							</div>
 						</div>
@@ -290,10 +284,9 @@
 								<h4>System.Exit</h4>
 								<p>Fall 2017</p>
 								<div class="portfolio-links">
-									<a href="https://gamejolt.com/games/systemexit/294165"><i class="bx bx-play"></i></a>
-									<a href="portfolio-details.html" data-gall="portfolioDetailsGallery"
-										data-vbtype="iframe" class="venobox" title="Portfolio Details"><i
-											class="bx bx-link"></i></a>
+									<a href="https://gamejolt.com/games/systemexit/294165"><i
+											class="bx bx-play"></i></a>
+									<a href="systemExitDetails.html"><i class="bx bx-link"></i></a>
 								</div>
 							</div>
 						</div>
@@ -303,13 +296,11 @@
 						<div class="portfolio-wrap">
 							<img src="assets/img/portfolio/rvvrCover.png" class="img-fluid" alt="">
 							<div class="portfolio-info">
-								<h4>RV.VR</h4>
+								<h4>RV VR</h4>
 								<p>Winter 2019</p>
 								<div class="portfolio-links">
 									<a href="https://sarahcatseye.itch.io/rv-vr"><i class="bx bx-play"></i></a>
-									<a href="portfolio-details.html" data-gall="portfolioDetailsGallery"
-										data-vbtype="iframe" class="venobox" title="Portfolio Details"><i
-											class="bx bx-link"></i></a>
+									<a href="rvvrDetails.html"><i class="bx bx-link"></i></a>
 								</div>
 							</div>
 						</div>
@@ -322,10 +313,9 @@
 								<h4>Trouble on Beryl Isle</h4>
 								<p>Spring 2018</p>
 								<div class="portfolio-links">
-									<a href="http://vgdev.gtorg.gatech.edu/game/trouble-on-beryl-isle/"><i class="bx bx-play"></i></a>
-									<a href="portfolio-details.html" data-gall="portfolioDetailsGallery"
-										data-vbtype="iframe" class="venobox" title="Portfolio Details"><i
-											class="bx bx-link"></i></a>
+									<a href="http://vgdev.gtorg.gatech.edu/game/trouble-on-beryl-isle/"><i
+											class="bx bx-play"></i></a>
+									<a href="tobiDetails.html"><i class="bx bx-link"></i></a>
 								</div>
 							</div>
 						</div>
@@ -338,11 +328,10 @@
 								<h4>Hengliding</h4>
 								<p>Spring 2019</p>
 								<div class="portfolio-links">
-									<a href="http://vgdev.gtorg.gatech.edu/game/hengliding/"><i class="bx bx-play"></i></a>
-									<a href="portfolio-details.html" data-gall="portfolioDetailsGallery"
-										data-vbtype="iframe" class="venobox" title="Portfolio Details"><i
-											class="bx bx-link"></i></a>
-								</div>
+									<a href="http://vgdev.gtorg.gatech.edu/game/hengliding/"><i
+										class="bx bx-play"></i></a>
+								<a href="henglidingDetails.html"><i class="bx bx-link"></i></a>
+							</div>
 							</div>
 						</div>
 					</div>
@@ -354,10 +343,9 @@
 								<h4>Clean My Desk</h4>
 								<p>Spring 2018</p>
 								<div class="portfolio-links">
-									<a href="http://vgdev.gtorg.gatech.edu/game/clean-my-desk/"><i class="bx bx-play"></i></a>
-									<a href="portfolio-details.html" data-gall="portfolioDetailsGallery"
-										data-vbtype="iframe" class="venobox" title="Portfolio Details"><i
-											class="bx bx-link"></i></a>
+									<a href="http://vgdev.gtorg.gatech.edu/game/clean-my-desk/"><i
+											class="bx bx-play"></i></a>
+									<a href="cleanMyDeskDetails.html"><i class="bx bx-link"></i></a>
 								</div>
 							</div>
 						</div>
@@ -370,9 +358,7 @@
 								<h4>Dreamworld</h4>
 								<p>Spring 2017</p>
 								<div class="portfolio-links">
-									<a href="portfolio-details.html" data-gall="portfolioDetailsGallery"
-										data-vbtype="iframe" class="venobox" title="Portfolio Details"><i
-											class="bx bx-link"></i></a>
+									<a href="dreamworldDetails.html"><i class="bx bx-link"></i></a>
 								</div>
 							</div>
 						</div>
