update tobi info!

--- a/tobiDetails.html
+++ b/tobiDetails.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-	<title>System.Exit</title>
+	<title>Trouble on Beryl Isle</title>
 	<meta content="" name="descriptison">
 	<meta content="" name="keywords">
 
@@ -48,7 +48,7 @@
 				<div class="row">
 
 					<div class="col-lg-8">
-						<h2 class="portfolio-title">System.Exit</h2>
+						<h2 class="portfolio-title">Trouble on Beryl Isle</h2>
 						<div class="owl-carousel portfolio-details-carousel">
 							<img src="assets/img/portfolio/tobiCover.png" class="img-fluid" alt="">
 						</div>
@@ -60,20 +60,20 @@
 							<li><strong>Engine</strong>: Unity</li>
 							<li><strong>Project date</strong>: Fall 2017</li>
 							<li><strong>Play</strong>: <a
-									href="https://gamejolt.com/games/systemexit/294165">https://gamejolt.com/games/systemexit/294165</a>
+									href="http://vgdev.gtorg.gatech.edu/game/trouble-on-beryl-isle/">http://vgdev.gtorg.gatech.edu/game/trouble-on-beryl-isle/</a>
 							</li>
 						</ul>
 
 						<p>
-							System.Exit was my first game with VGDev. I had the fortune to work under a patient lead who
-							helped me learn skills that are necessary to work on larger projects, such as developing
-							with an established code base. My work on System.Exit focused on development; I designed and
-							implemented mechanics, items, enemies, and battles.
+							Trouble on Beryl Isle is a sunny platformer I worked on through VGDev. I coded AI for an
+							enemy in addition to creating environments.
 						</p>
 						<p>
-							System.Exit also taught me the value of play testing. Although testing is crucial for all
-							games, an RPG like ours was especially difficult to balance with the "squint and hope"
-							method, and the enjoyability of the game improved markedly as we iterated.
+							The annual Party in the Penthouse is the most exclusive event on Beryl Isle, and you weren’t
+							cool enough to get the invite… Play as Luke the Wolf, explore every nook and cranny of his
+							island hometown at your leisure, and discover spots he can tag to build up his reputation!
+							Inspired by the classics of the genre, Trouble on Beryl Isle is a feel-good, open-world 3D
+							platformer, with fun enemies to fight and a deep moveset to master.
 						</p>
 					</div>
 
