enhance project descriptions

--- a/dreamworldDetails.html
+++ b/dreamworldDetails.html
@@ -64,7 +64,8 @@
 						</ul>
 
 						<p>
-							Dreamworld is a walking simulator about alien worlds. I drew environment pixel art. </p>
+							Dreamworld is a walking simulator about alien worlds I made with a few friends in high
+							school. I drew environment pixel art. </p>
 					</div>
 
 				</div>
