--- a/henglidingDetails.html
+++ b/henglidingDetails.html
@@ -69,7 +69,9 @@
 
 						<p>
 							Hengliding, a Tamagotchi meets Mario Kart game about raising chickens. I co-lead this game
-							and contributed architecture and featuring code, as well as models, animation, etc. </p>
+							with my dear friend Sarah Tsai and contributed architecture and featuring code, as well as
+							models, animation, and more!
+						</p>
 					</div>
 
 				</div>
