--- a/lunaciaDetails.html
+++ b/lunaciaDetails.html
@@ -62,19 +62,12 @@
 							<li><strong>Play</strong>: <a href="#">Coming soon</a></li>
 						</ul>
 
-						<!-- <p>
-							Blair always dreamed of being a righteous leader like the monarchs of legend. When a plague
-							strikes and the Kingdom of Xingata's strained relationships with its neighbors snap, Blair
-							gets a chance to prove their leadership in battle. But as they rise though the ranks it
-							becomes clear not all is as it seems within the Xingatan military.
-						</p>
 						<p>
-							Inspired by titles like Fire Emblem, Path to Harmony combines a fantasy setting, tactics
-							based game play, and a rich story told though character interactions. Play as Blair and
-							triumph in battle to save the people of Xingata!
-						</p> -->
+							Lunacia is an atmospheric puzzle / platformer about finding yourself through dreams. I am
+							co-leading this project with Yoon Lee. I'm involved in all aspects, but focusing on
+							management, technical leadership, programming, and visual effects.
+						</p>
 					</div>
-
 				</div>
 
 			</div>
