--- a/pathToHarmonyDetails.html
+++ b/pathToHarmonyDetails.html
@@ -68,14 +68,15 @@
 						</ul>
 
 						<p>
-							The game I'm most proud of is Path to Harmony. I led this project as part of VGDev, Georgia
-							Tech's game creation club, and was involved in every aspect of its creation. Over six months
-							my team made a fully featured game with a compelling narrative, soundtrack, dozens of levels
-							and units, and deep game play. Heading the project let me develop leadership and project
-							management skills, in addition to all the game development ones.
+							Path to Harmony is one of the games I'm most proud of. I led this project as part of VGDev,
+							Georgia Tech's game creation club, and was involved in every aspect of its creation. Over
+							six months my team made a fully featured game with a compelling narrative, soundtrack,
+							dozens of levels and units, and deep game play. Heading the project let me develop
+							leadership and project management skills, in addition to all the game development ones.
 						</p>
 						<p>
-							Blair always dreamed of being a righteous leader like the monarchs of legend. When a plague
+							The game follows the adventures of Blair, an idealistic strategist in the Xingatan army.
+							They always dreamed of being a righteous leader like the monarchs of legend. When a plague
 							strikes and the Kingdom of Xingata's strained relationships with its neighbors snap, Blair
 							gets a chance to prove their leadership in battle. But as they rise though the ranks it
 							becomes clear not all is as it seems within the Xingatan military.
