--- a/rvvrDetails.html
+++ b/rvvrDetails.html
@@ -69,11 +69,14 @@
 						</ul>
 
 						<p>
-							RV VR, a game about a family road trip through the cosmos. Among other things, I created a
-							system that applied different audio and visual effects based how the player collided with an
+							RV VR is a game about a family road trip through the cosmos, taco bell, and aliens. It was
+							created for GGJ with several of my good friends. Among other things, I created a system that
+							applied different audio and visual effects based how the player collided with an
 							obstacle.
 						</p>
-						<p>Won honorable mention at GGJ GSU 2019</p>
+						<p>
+							Won honorable mention at GGJ GSU 2019
+						</p>
 					</div>
 
 				</div>
