--- a/tobiDetails.html
+++ b/tobiDetails.html
@@ -66,7 +66,7 @@
 
 						<p>
 							Trouble on Beryl Isle is a sunny platformer I worked on through VGDev. I coded AI for an
-							enemy in addition to creating environments.
+							enemy in addition to creating levels / environments.
 						</p>
 						<p>
 							The annual Party in the Penthouse is the most exclusive event on Beryl Isle, and you weren’t
