--- a/cleanMyDeskDetails.html
+++ b/cleanMyDeskDetails.html
@@ -66,7 +66,9 @@
 
 						<p>
 							Clean my Desk, another VGDev game, is about procrastination, interior decoration, and
-							art(?). I primarily contributed models and textures. </p>
+							art(?). I primarily contributed models and textures, as well as some minior bits of code.
+							This project was a great experience learning how to model and texture a large
+							number of assets efficiently. I worked with Blender and Substance Painter. </p>
 					</div>
 
 				</div>
