--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
 						</div>
 
 						<div class="progress">
-							<span class="skill">Git <i class="val">Proficent</i></span>
+							<span class="skill">Substance Painter <i class="val">Familiar</i></span>
 							<div class="progress-bar-wrap">
-								<div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+								<div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0"
 									aria-valuemax="100"></div>
 							</div>
 						</div>
