--- a/miSoMadnessDetails.html
+++ b/miSoMadnessDetails.html
@@ -62,17 +62,10 @@
 							<li><strong>Play</strong>: <a href="#">Coming soon</a></li>
 						</ul>
 
-						<!-- <p>
-							Blair always dreamed of being a righteous leader like the monarchs of legend. When a plague
-							strikes and the Kingdom of Xingata's strained relationships with its neighbors snap, Blair
-							gets a chance to prove their leadership in battle. But as they rise though the ranks it
-							becomes clear not all is as it seems within the Xingatan military.
-						</p>
 						<p>
-							Inspired by titles like Fire Emblem, Path to Harmony combines a fantasy setting, tactics
-							based game play, and a rich story told though character interactions. Play as Blair and
-							triumph in battle to save the people of Xingata!
-						</p> -->
+							Mi So Madness is a networked infinite runner / bridge builder combo. I am contributing c++
+							and blueprint networking code for some of the internal systems.
+						</p>
 					</div>
 
 				</div>
