added melody star, pics for lunacia + mi so madness, updated resume

--- a/dreamworldDetails.html
+++ b/dreamworldDetails.html
@@ -65,7 +65,8 @@
 
 						<p>
 							Dreamworld is a walking simulator about alien worlds I made with a few friends in high
-							school. I drew environment pixel art. </p>
+							school. I drew environment pixel art.
+						</p>
 					</div>
 
 				</div>
