--- a/index.html
+++ b/index.html
@@ -73,6 +73,175 @@
 
 	<main id="main">
 
+		<!-- ======= Portfolio Section ======= -->
+		<section id="portfolio" class="portfolio section-bg">
+			<div class="container" data-aos="fade-up">
+
+				<div class="section-title">
+					<h2>Portfolio</h2>
+					<p>Some of the projects I've worked on over the years</p>
+				</div>
+
+				<div class="row">
+					<div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
+						<ul id="portfolio-flters">
+							<li data-filter="*" class="filter-active">All</li>
+							<li data-filter=".filter-unity">Unity</li>
+							<li data-filter=".filter-unreal">UE4</li>
+							<li data-filter=".filter-other">Other</li>
+						</ul>
+					</div>
+				</div>
+
+				<div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
+
+					<div class="col-lg-4 col-md-6 portfolio-item filter-unity">
+						<div class="portfolio-wrap">
+							<img src="assets/img/portfolio/PTHCover.png" class="img-fluid" alt="">
+							<div class="portfolio-info">
+								<h4>Path to Harmony</h4>
+								<p>Fall 2018</p>
+								<div class="portfolio-links">
+									<a href="https://cinnamon18.itch.io/path-to-harmony"><i class="bx bx-play"></i></a>
+									<a href="pathToHarmonyDetails.html"><i class="bx bx-link"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-4 col-md-6 portfolio-item filter-unity">
+						<div class="portfolio-wrap">
+							<img src="assets/img/portfolio/melodyStarCover.png" class="img-fluid" alt="">
+							<div class="portfolio-info">
+								<h4>Melody Star!</h4>
+								<p>Fall 2019</p>
+								<div class="portfolio-links">
+									<a href="http://vgdev.gtorg.gatech.edu/game/melody-star/"><i class="bx bx-play"></i></a>
+									<a href="melodyStarDetails.html"><i class="bx bx-link"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-4 col-md-6 portfolio-item filter-unity">
+						<div class="portfolio-wrap">
+							<img src="assets/img/portfolio/lunaciaCover.png" class="img-fluid" alt="">
+							<div class="portfolio-info">
+								<h4>Lunacia</h4>
+								<p>Fall 2020</p>
+								<div class="portfolio-links">
+									<a href="http://vgdev.gtorg.gatech.edu/game/lunacia/"><i class="bx bx-play"></i></a>
+									<a href="lunaciaDetails.html"><i class="bx bx-link"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-4 col-md-6 portfolio-item filter-unreal">
+						<div class="portfolio-wrap">
+							<img src="assets/img/portfolio/miSoMadnessCover.png" class="img-fluid" alt="">
+							<div class="portfolio-info">
+								<h4>Mi So Madness</h4>
+								<p>Coming Late 2020</p>
+								<div class="portfolio-links">
+									<a href="http://vgdev.gtorg.gatech.edu/game/mi-so-madness/"><i class="bx bx-play"></i></a>
+									<a href="miSoMadnessDetails.html"><i class="bx bx-link"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-4 col-md-6 portfolio-item filter-unity">
+						<div class="portfolio-wrap">
+							<img src="assets/img/portfolio/systemExitCover.png" class="img-fluid" alt="">
+							<div class="portfolio-info">
+								<h4>System.Exit</h4>
+								<p>Fall 2017</p>
+								<div class="portfolio-links">
+									<a href="https://gamejolt.com/games/systemexit/294165"><i
+											class="bx bx-play"></i></a>
+									<a href="systemExitDetails.html"><i class="bx bx-link"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-4 col-md-6 portfolio-item filter-unity">
+						<div class="portfolio-wrap">
+							<img src="assets/img/portfolio/rvvrCover.png" class="img-fluid" alt="">
+							<div class="portfolio-info">
+								<h4>RV VR</h4>
+								<p>Winter 2019</p>
+								<div class="portfolio-links">
+									<a href="https://sarahcatseye.itch.io/rv-vr"><i class="bx bx-play"></i></a>
+									<a href="rvvrDetails.html"><i class="bx bx-link"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-4 col-md-6 portfolio-item filter-unity">
+						<div class="portfolio-wrap">
+							<img src="assets/img/portfolio/tobiCover.png" class="img-fluid" alt="">
+							<div class="portfolio-info">
+								<h4>Trouble on Beryl Isle</h4>
+								<p>Spring 2018</p>
+								<div class="portfolio-links">
+									<a href="http://vgdev.gtorg.gatech.edu/game/trouble-on-beryl-isle/"><i
+											class="bx bx-play"></i></a>
+									<a href="tobiDetails.html"><i class="bx bx-link"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-4 col-md-6 portfolio-item filter-unity">
+						<div class="portfolio-wrap">
+							<img src="assets/img/portfolio/henglidingCover.png" class="img-fluid" alt="">
+							<div class="portfolio-info">
+								<h4>Hengliding</h4>
+								<p>Spring 2019</p>
+								<div class="portfolio-links">
+									<a href="http://vgdev.gtorg.gatech.edu/game/hengliding/"><i
+											class="bx bx-play"></i></a>
+									<a href="henglidingDetails.html"><i class="bx bx-link"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-4 col-md-6 portfolio-item filter-unity">
+						<div class="portfolio-wrap">
+							<img src="assets/img/portfolio/cleanMyDeskCover.png" class="img-fluid" alt="">
+							<div class="portfolio-info">
+								<h4>Clean My Desk</h4>
+								<p>Spring 2018</p>
+								<div class="portfolio-links">
+									<a href="http://vgdev.gtorg.gatech.edu/game/clean-my-desk/"><i
+											class="bx bx-play"></i></a>
+									<a href="cleanMyDeskDetails.html"><i class="bx bx-link"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-4 col-md-6 portfolio-item filter-other">
+						<div class="portfolio-wrap">
+							<img src="assets/img/portfolio/dreamworldCover.png" class="img-fluid" alt="">
+							<div class="portfolio-info">
+								<h4>Dreamworld</h4>
+								<p>Spring 2017</p>
+								<div class="portfolio-links">
+									<a href="dreamworldDetails.html"><i class="bx bx-link"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</section><!-- End Portfolio Section -->
+
 		<!-- ======= About Section ======= -->
 		<section id="about" class="about">
 			<div class="container" data-aos="fade-up">
@@ -92,10 +261,10 @@
 					<div class="col-lg-8 pt-4 pt-lg-0 content">
 						<h3>I'm a Game Developer</h3>
 						<!-- <p class="font-italic">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-							labore et dolore
-							magna aliqua.
-						</p> -->
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+					labore et dolore
+					magna aliqua.
+				</p> -->
 						<div class="row">
 							<div class="col-lg-12">
 								<ul>
@@ -214,169 +383,13 @@
 			</div>
 		</section><!-- End Skills Section -->
 
-		<!-- ======= Portfolio Section ======= -->
-		<section id="portfolio" class="portfolio section-bg">
-			<div class="container" data-aos="fade-up">
-
-				<div class="section-title">
-					<h2>Portfolio</h2>
-					<p>Some of the projects I've worked on over the years</p>
-				</div>
-
-				<div class="row">
-					<div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
-						<ul id="portfolio-flters">
-							<li data-filter="*" class="filter-active">All</li>
-							<li data-filter=".filter-unity">Unity</li>
-							<li data-filter=".filter-unreal">UE4</li>
-							<li data-filter=".filter-other">Other</li>
-						</ul>
-					</div>
-				</div>
-
-				<div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
-
-					<div class="col-lg-4 col-md-6 portfolio-item filter-unity">
-						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/PTHCover.png" class="img-fluid" alt="">
-							<div class="portfolio-info">
-								<h4>Path to Harmony</h4>
-								<p>Fall 2018</p>
-								<div class="portfolio-links">
-									<a href="https://cinnamon18.itch.io/path-to-harmony"><i class="bx bx-play"></i></a>
-									<a href="pathToHarmonyDetails.html"><i class="bx bx-link"></i></a>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-lg-4 col-md-6 portfolio-item filter-unity">
-						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/lunaciaCover.png" class="img-fluid" alt="">
-							<div class="portfolio-info">
-								<h4>Lunacia</h4>
-								<p>Coming Late 2020</p>
-								<div class="portfolio-links">
-									<!-- <a href="http://vgdev.gtorg.gatech.edu/game/lunacia/"><i class="bx bx-play"></i></a> -->
-									<a href="lunaciaDetails.html"><i class="bx bx-link"></i></a>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-lg-4 col-md-6 portfolio-item filter-unreal">
-						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/miSoMadnessCover.png" class="img-fluid" alt="">
-							<div class="portfolio-info">
-								<h4>Mi So Madness</h4>
-								<p>Coming Late 2020</p>
-								<div class="portfolio-links">
-									<!-- <a href="http://vgdev.gtorg.gatech.edu/game/misomadness/"><i class="bx bx-play"></i></a> -->
-									<a href="miSoMadnessDetails.html"><i class="bx bx-link"></i></a>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-lg-4 col-md-6 portfolio-item filter-unity">
-						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/systemExitCover.png" class="img-fluid" alt="">
-							<div class="portfolio-info">
-								<h4>System.Exit</h4>
-								<p>Fall 2017</p>
-								<div class="portfolio-links">
-									<a href="https://gamejolt.com/games/systemexit/294165"><i
-											class="bx bx-play"></i></a>
-									<a href="systemExitDetails.html"><i class="bx bx-link"></i></a>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-lg-4 col-md-6 portfolio-item filter-unity">
-						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/rvvrCover.png" class="img-fluid" alt="">
-							<div class="portfolio-info">
-								<h4>RV VR</h4>
-								<p>Winter 2019</p>
-								<div class="portfolio-links">
-									<a href="https://sarahcatseye.itch.io/rv-vr"><i class="bx bx-play"></i></a>
-									<a href="rvvrDetails.html"><i class="bx bx-link"></i></a>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-lg-4 col-md-6 portfolio-item filter-unity">
-						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/tobiCover.png" class="img-fluid" alt="">
-							<div class="portfolio-info">
-								<h4>Trouble on Beryl Isle</h4>
-								<p>Spring 2018</p>
-								<div class="portfolio-links">
-									<a href="http://vgdev.gtorg.gatech.edu/game/trouble-on-beryl-isle/"><i
-											class="bx bx-play"></i></a>
-									<a href="tobiDetails.html"><i class="bx bx-link"></i></a>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-lg-4 col-md-6 portfolio-item filter-unity">
-						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/henglidingCover.png" class="img-fluid" alt="">
-							<div class="portfolio-info">
-								<h4>Hengliding</h4>
-								<p>Spring 2019</p>
-								<div class="portfolio-links">
-									<a href="http://vgdev.gtorg.gatech.edu/game/hengliding/"><i
-										class="bx bx-play"></i></a>
-								<a href="henglidingDetails.html"><i class="bx bx-link"></i></a>
-							</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-lg-4 col-md-6 portfolio-item filter-unity">
-						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/cleanMyDeskCover.png" class="img-fluid" alt="">
-							<div class="portfolio-info">
-								<h4>Clean My Desk</h4>
-								<p>Spring 2018</p>
-								<div class="portfolio-links">
-									<a href="http://vgdev.gtorg.gatech.edu/game/clean-my-desk/"><i
-											class="bx bx-play"></i></a>
-									<a href="cleanMyDeskDetails.html"><i class="bx bx-link"></i></a>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-lg-4 col-md-6 portfolio-item filter-other">
-						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/dreamworldCover.png" class="img-fluid" alt="">
-							<div class="portfolio-info">
-								<h4>Dreamworld</h4>
-								<p>Spring 2017</p>
-								<div class="portfolio-links">
-									<a href="dreamworldDetails.html"><i class="bx bx-link"></i></a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-			</div>
-		</section><!-- End Portfolio Section -->
-
-
 		<!-- ======= Resume Section ======= -->
 		<section id="resume" class="resume">
 			<div class="container" data-aos="fade-up">
 
 				<div class="section-title">
 					<h2>Resume</h2>
-					<p>Download my full resume <a href="https://cinnamon18.github.io/MohAliceResume.pdf">here</a> </p>
+					<p>Download my full resume <a href="https://cinnamon18.github.io/MohAliceResumeGames.pdf">here</a> </p>
 				</div>
 
 				<div class="row">
