--- a/lunaciaDetails.html
+++ b/lunaciaDetails.html
@@ -51,6 +51,7 @@
 						<h2 class="portfolio-title">Lunacia</h2>
 						<div class="owl-carousel portfolio-details-carousel">
 							<img src="assets/img/portfolio/lunaciaCover.png" class="img-fluid" alt="">
+							<img src="assets/img/portfolio/lunacia1.png" class="img-fluid" alt="">
 						</div>
 					</div>
 
@@ -58,14 +59,19 @@
 						<h3>Project information</h3>
 						<ul>
 							<li><strong>Engine</strong>: Unity</li>
-							<li><strong>Project date</strong>: Coming Late 2020</li>
-							<li><strong>Play</strong>: <a href="#">Coming soon</a></li>
+							<li><strong>Project date</strong>: Fall 2020</li>
+							<li><strong>Play</strong>: <a
+									href="http://vgdev.gtorg.gatech.edu/game/lunacia/">http://vgdev.gtorg.gatech.edu/game/lunacia/</a>
+							</li>
 						</ul>
 
 						<p>
-							Lunacia is an atmospheric puzzle / platformer about finding yourself through dreams. I am
-							co-leading this project with Yoon Lee. I'm involved in all aspects, but focusing on
-							management, technical leadership, programming, and visual effects.
+							Lunacia is an atmospheric puzzle / platformer about finding yourself through dreams. I
+							co-lead this project with Yoon Lee. I'm involved in all aspects, but I'm focusing on
+							technical leadership, programming, and visual effects.
+
+							One interesting system I worked on with this project was a publisher / subscriber system.
+							Early on it became apparent our technical team would be both large and innexperienced.
 						</p>
 					</div>
 				</div>
