--- a/melodyStarDetails.html
+++ b/melodyStarDetails.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-	<title>RV VR</title>
+	<title>Melody Star!</title>
 	<meta content="" name="descriptison">
 	<meta content="" name="keywords">
 
@@ -48,13 +48,13 @@
 				<div class="row">
 
 					<div class="col-lg-8">
-						<h2 class="portfolio-title">RV VR</h2>
+						<h2 class="portfolio-title">Melody Star!</h2>
 						<div class="owl-carousel portfolio-details-carousel">
-							<img src="assets/img/portfolio/rvvrCover.png" class="img-fluid" alt="">
-							<img src="assets/img/portfolio/rvvr1.png" class="img-fluid" alt="">
-							<img src="assets/img/portfolio/rvvr2.png" class="img-fluid" alt="">
-							<img src="assets/img/portfolio/rvvr3.jpg" class="img-fluid" alt="">
-							<img src="assets/img/portfolio/rvvr4.jpg" class="img-fluid" alt="">
+							<img src="assets/img/portfolio/melodyStarCover.png" class="img-fluid" alt="">
+							<img src="assets/img/portfolio/melodyStar1.png" class="img-fluid" alt="">
+							<img src="assets/img/portfolio/melodyStar2.png" class="img-fluid" alt="">
+							<img src="assets/img/portfolio/melodyStar3.png" class="img-fluid" alt="">
+							<img src="assets/img/portfolio/melodyStar4.png" class="img-fluid" alt="">
 						</div>
 					</div>
 
@@ -62,20 +62,14 @@
 						<h3>Project information</h3>
 						<ul>
 							<li><strong>Engine</strong>: Unity</li>
-							<li><strong>Project date</strong>: Winter 2019</li>
+							<li><strong>Project date</strong>: Fall 2019</li>
 							<li><strong>Play</strong>: <a
-									href="https://sarahcatseye.itch.io/rv-vr">https://sarahcatseye.itch.io/rv-vr</a>
+									href="http://vgdev.gtorg.gatech.edu/game/melody-star/">http://vgdev.gtorg.gatech.edu/game/melody-star/</a>
 							</li>
 						</ul>
 
 						<p>
-							RV VR is a game about a family road trip through the cosmos, taco bell, and aliens. It was
-							created for GGJ with several of my good friends. I served primarily as a gameplay
-							programmer. Among other things, I created a system that applied different audio and visual
-							effects based how the player collided with an obstacle.
-						</p>
-						<p>
-							Won honorable mention at GGJ GSU 2019
+							
 						</p>
 					</div>
 
