--- a/miSoMadnessDetails.html
+++ b/miSoMadnessDetails.html
@@ -51,20 +51,24 @@
 						<h2 class="portfolio-title">Mi So Madness</h2>
 						<div class="owl-carousel portfolio-details-carousel">
 							<img src="assets/img/portfolio/miSoMadnessCover.png" class="img-fluid" alt="">
+							<img src="assets/img/portfolio/miSoMadness1.png" class="img-fluid" alt="">
+							<img src="assets/img/portfolio/miSoMadness2.png" class="img-fluid" alt="">
+							<img src="assets/img/portfolio/miSoMadness3.png" class="img-fluid" alt="">
 						</div>
 					</div>
 
 					<div class="col-lg-4 portfolio-info">
 						<h3>Project information</h3>
 						<ul>
-							<li><strong>Engine</strong>: Unreal</li>
-							<li><strong>Project date</strong>: Coming Late 2020</li>
-							<li><strong>Play</strong>: <a href="#">Coming soon</a></li>
+							<li><strong>Engine</strong>: UE4</li>
+							<li><strong>Project date</strong>: Fall 2020</li>
+							<li><strong>Play</strong>: <a href="http://vgdev.gtorg.gatech.edu/game/mi-so-madness/">http://vgdev.gtorg.gatech.edu/game/mi-so-madness/</a></li>
 						</ul>
 
 						<p>
-							Mi So Madness is a networked infinite runner / bridge builder combo. I am contributing c++
-							and blueprint networking code for some of the internal systems.
+							Mi So Madness is a multiplayer infinite runner that uses the Steam Online Subsystem for its
+							networking functionality. I am contributing c+ and blueprint networking code for some of the
+							internal systems.
 						</p>
 					</div>
 
