--- a/pathToHarmonyDetails.html
+++ b/pathToHarmonyDetails.html
@@ -72,7 +72,9 @@
 							Georgia Tech's game creation club, and was involved in every aspect of its creation. Over
 							six months my team made a fully featured game with a compelling narrative, soundtrack,
 							dozens of levels and units, and deep game play. Heading the project let me develop
-							leadership and project management skills, in addition to all the game development ones.
+							leadership and project management skills, in addition to game development skills. PtH was my
+							first time architecting a project of its scale, and I learned an enormous amount from my
+							successful decisions as well as the ones that caused growing pains.
 						</p>
 						<p>
 							The game follows the adventures of Blair, an idealistic strategist in the Xingatan army.
@@ -81,10 +83,6 @@
 							gets a chance to prove their leadership in battle. But as they rise though the ranks it
 							becomes clear not all is as it seems within the Xingatan military.
 						</p>
-						<p>
-							Inspired by titles like Fire Emblem, Path to Harmony combines a fantasy setting, tactics
-							based game play, and a rich story told though character interactions. Play as Blair and
-							triumph in battle to save the people of Xingata! </p>
 					</div>
 
 				</div>
